Fixed navbar buttons

--- a/public/index.html
+++ b/public/index.html
@@ -16,9 +16,10 @@
 <body>
     <nav id="navbar" class="container-fluid w-100">
         <img src="/docs/4.0/assets/brand/bootstrap-solid.svg" width="30" height="30" alt="">
-        <button class="important-button">Home</button>
-        <button>Gallery</button>
-        <button>Contact Me</button>
+
+        <a href="#"><button class="important-button">Home</button></a>
+        <a href="#gallery"><button>Gallery</button></a>
+        <a href="#contact"><button>Contact me</button></a>
         <!-- <div id="profile-end">
             <button>Log In</button>
             <button class="important-button">Sign Up</button>
@@ -32,7 +33,7 @@
         <br><br>
         <h5>An art student in Henry M. Gunn High School</h5>
     </section>
-    <section class="section-secondary">
+    <section class="section-secondary" id="gallery">
         <h2>Gallery</h2>
         <br><br>
         <div class="row">
@@ -53,6 +54,17 @@
                 </div>
             </div>
         </div>
+    </section>
+    <section id="contact">
+        <h2>Contact me</h2>
+        <br><br>
+        <p>
+            <b>Email:&nbsp;&nbsp;&nbsp;</b>blueberry21007@gmail.com<br>
+            <b>School Email:&nbsp;&nbsp;&nbsp;</b>jl33092@pausd.us<br>
+            <hr>
+            <b>Email:&nbsp;&nbsp;&nbsp;</b>blueberry21007@gmail.com<br>
+            <b>School Email:&nbsp;&nbsp;&nbsp;</b>jl33092@pausd.us<br>
+        </p>
     </section>
 </body>
 </html>
