Gallery item hover effects

--- a/public/index.html
+++ b/public/index.html
@@ -39,8 +39,11 @@
         <div class="row">
             <div class="col-3">
                 <div class="gallery-item" style="background: red;">
-                    <div class="container-fluid caption-overlay">
-                        <p>Caption test</p>
+                    <div class="container-fluid caption-overlay h-100">
+                        <p>
+                            <b>Caption test</b><br><br>
+                            Description test
+                        </p>
                     </div>
                 </div>
             </div>
@@ -48,8 +51,11 @@
             <div class="col-3">
                 <!-- <div class="gallery-item" style="background: url('gallery/placeholder.png');"> -->
                 <div class="gallery-item" style="background: green;">
-                    <div class="container-fluid caption-overlay">
-                        <p>Caption test</p>
+                    <div class="container-fluid caption-overlay h-100">
+                        <p>
+                            <b>Caption test</b><br><br>
+                            Description test
+                        </p>
                     </div>
                 </div>
             </div>
