--- a/public/index.html
+++ b/public/index.html
@@ -7,16 +7,29 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+        integrity=
+        "sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" 
+        crossorigin="anonymous"></script>
 
     <link rel="stylesheet" href="style.css">
 
     <script src="sitecomponents.js"></script>
     <title>Home</title>
 </head>
-<body>
-    <nav id="navbar" class="container-fluid w-100">
-        <img src="/docs/4.0/assets/brand/bootstrap-solid.svg" width="30" height="30" alt="">
+<body onload="loadAllGalleryItems();">
+    <div class="row invisible" id="gallery-window">
+        <div class="col-2" id="information">
+            <button class="important-button" onclick="closeWindow();">Exit</button><br><br>
+            <h3 id="title">Caption test</h3>
+        </div>
+        <div class="col-9" id="gallery-full">
+        </div>
+    </div>
 
+    <nav id="navbar" class="container-fluid w-100">
         <a href="#"><button class="important-button">Home</button></a>
         <a href="#gallery"><button>Gallery</button></a>
         <a href="#contact"><button>Contact me</button></a>
@@ -36,30 +49,6 @@
     <section class="section-secondary" id="gallery">
         <h2>Gallery</h2>
         <br><br>
-        <div class="row">
-            <div class="col-3">
-                <div class="gallery-item" style="background: red;">
-                    <div class="container-fluid caption-overlay h-100">
-                        <p>
-                            <b>Caption test</b><br><br>
-                            Description test
-                        </p>
-                    </div>
-                </div>
-            </div>
-            
-            <div class="col-3">
-                <!-- <div class="gallery-item" style="background: url('gallery/placeholder.png');"> -->
-                <div class="gallery-item" style="background: green;">
-                    <div class="container-fluid caption-overlay h-100">
-                        <p>
-                            <b>Caption test</b><br><br>
-                            Description test
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </div>
     </section>
     <section id="contact">
         <h2>Contact me</h2>
