--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,21 @@
         <h2>Gallery</h2>
         <br><br>
     </section>
-    <section id="contact">
+    <section id="about">
+        <h2>About me</h2>
+        <br><br>
+        <p>
+            I am Jesse, a fellow class of 2025 art and CS student at Gunn High School. Of course, I enjoy art, mainly when it comes to charcoal, conte, inkpen, and oil painting. Inkpen, charcoal, and conte are especially great at achieving simple, quick, and nice looking results, while oil paints provides as a more versatile medium.
+        </p>
+        <br><h4>Education</h4>
+        <br><br>
+        <p>
+            Herbert Hoover Elementary School<br>
+            Jane Lathrop Stanford Middle School<br>
+            Henry M. Gunn High School
+        </p>
+    </section>
+    <section class="section-secondary" id="contact">
         <h2>Contact me</h2>
         <br><br>
         <p>
