--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,7 @@
     <nav id="navbar" class="container-fluid w-100">
         <a href="#"><button class="important-button">Home</button></a>
         <a href="#gallery"><button>Gallery</button></a>
+        <a href="#about"><button>About me</button></a>
         <a href="#contact"><button>Contact me</button></a>
         <!-- <div id="profile-end">
             <button>Log In</button>
